overlays/staging/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-app
spec:
  replicas: 1
